[gd_scene load_steps=13 format=3 uid="uid://d0b3clifjliac"]

[ext_resource type="Script" uid="uid://dnepsi6c0l41w" path="res://scripts/class/player_that_digs.gd" id="1_72ieh"]
[ext_resource type="PackedScene" uid="uid://blhd62dvlvboc" path="res://scenes/prefab/gui_interface/player_hud.tscn" id="2_t63vk"]
[ext_resource type="PackedScene" uid="uid://ddadbc6h0js3d" path="res://scenes/utility/crop.tscn" id="2_vuuqm"]
[ext_resource type="Material" uid="uid://b8tpkwagy3eer" path="res://resources/materials/plant_insides.material" id="3_emxo5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_22t8h"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_elu5t"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7ttd6"]

[sub_resource type="Animation" id="Animation_qdmn8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}

[sub_resource type="Animation" id="Animation_gnmda"]
resource_name = "crouch"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1n4xs"]
_data = {
&"RESET": SubResource("Animation_qdmn8"),
&"crouch": SubResource("Animation_gnmda")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_urfm4"]
radius = 0.1

[sub_resource type="BoxShape3D" id="BoxShape3D_72ieh"]
size = Vector3(1, 0.1, 1)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 19
script = ExtResource("1_72ieh")
spawn_crop = ExtResource("2_vuuqm")
plant_inside_material = ExtResource("3_emxo5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_22t8h")

[node name="UncrouchCheck" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("CapsuleShape3D_elu5t")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_7ttd6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1n4xs")
}

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="SpringArm3D" type="SpringArm3D" parent="Head/Camera3D"]
transform = Transform3D(-0.99999994, 0, -8.7422784e-08, 0, 1, 0, 8.742277e-08, 0, -1.0000001, 0, 0, 0)
collision_mask = 28
spring_length = 2.5

[node name="CSGSpawner" type="Marker3D" parent="Head/Camera3D/SpringArm3D"]
unique_name_in_owner = true

[node name="GroundCheck" type="ShapeCast3D" parent="Head/Camera3D/SpringArm3D"]
unique_name_in_owner = true
shape = SubResource("SphereShape3D_urfm4")
target_position = Vector3(0, 0, 0)
collision_mask = 16

[node name="SlicerArea" type="Area3D" parent="Head/Camera3D/SpringArm3D"]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Camera3D/SpringArm3D/SlicerArea"]
shape = SubResource("BoxShape3D_72ieh")

[node name="Slicer" type="Marker3D" parent="Head/Camera3D/SpringArm3D/SlicerArea"]
unique_name_in_owner = true
transform = Transform3D(1.0000001, 0, 0, 0, 1.0000001, 0, 0, 0, 1.0000001, 0, 0, 0)

[node name="Pointer" type="RayCast3D" parent="Head/Camera3D"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -2)
collision_mask = 8
hit_from_inside = true

[node name="PlayerHUD" parent="Head/Camera3D" instance=ExtResource("2_t63vk")]
unique_name_in_owner = true
